--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rails_mister_cocktail",
+  "name": "rails_mister_cocktail_prep",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
